# index.next

./: LICENSE.txt  LICENSE_RU.txt  README.md  pyproject.toml
src/index/: __init__.py  cli.py  data.py  definition.py  utils.py
src/index/db/: __init__.py
src/index/index_001/: __init__.py  format_xls.py  format_xlsb.py  format_xlsx.py
