[project]
name = "index"
version = "0.5.4.dev0"
description = "A lightweight spreadsheet indexing system"
readme = "README.md"
authors = [
    { name = "Stan Ovchinnikov", email = "lishnih@gmail.com" }
]
license = "MIT OR LGPL-2.1-or-later"
license-files = ["LICENSE*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = [
    "openpyxl>=3.0",
    "pyxlsb>=1.0",
    "pymongo>=4.0",
]
[project.optional-dependencies]
obsolete = ["xlrd"]
dotenv = ["python-dotenv"]
all = [
    "index[obsolete]",
    "index[dotenv]",
]

[dependency-groups]
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/ndtfy/index.next"
Issues = "https://github.com/ndtfy/index.next/issues"
Source = "https://gitflic.ru/project/stan/index"

[project.scripts]
index = "index.cli:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["index", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.9"
files = ["src"]
show_error_codes = true
pretty = true
strict = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "asgiref.*",
    "dotenv.*",
    "cryptography.*",
    "importlib_metadata",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.6"
include = ["src"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
